@@ -72,6 +72,7 @@ Bug Fixes:
 - City Screen
 	Happiness and unhappiness are shown for foreign cities
 	Whip/Draft Anger is shown for teammates' cities
+	Raw Yields now adds Trade Routes to commerce total when Fractional Trade is off, hides fractions when on
 - Team Games
 	WHEOOH works correctly and won't check if a rival will DoW on your teammates or theirs
 	Worst Enemy no longer shown for humans' teammates
@@ -89,7 +90,7 @@ MODDING
 New Features:
 
 - BUFFY
-	Merged BUFFY code into BUG
+	Merged BUFFY code into BUG so there's one code repository
 
 Improvements:
 
